# paas-mon

./: .gitignore  Dockerfile  README.md  pyproject.toml
jenkins/: docker.Jenkinsfile
kafka/: README.md  compose,yaml  compose.yaml  compose_1.yaml  compose_2.yaml  compose_3.yaml  syslog-ng.conf
kafka-components/: 1-template-parser.orig.py  1-template-parser.py  2-infer-processor.py  Dockerfile  README.md  compose.yaml  infer_processor_conf.py
kafka-components/1-template-parser/: 1-template-parser.py  1_template_parser.py
kafka-components/processors/: compose.yml  dataset-collector.py  template-parser.py
kafka-components/producer-rally/: app_conf.py  app_kafka.py  compose.yml  cron_cmd.sh
kafka-components/src/: compose-cons-file.yml  consumer-file.py  inference-processor.py  template-parser.py  training-processor.py
kafka-components/src/modules/: infer_processor.py  infer_processor_conf.py  kafka_module.py  orc_log_processor.py  orc_log_processor_conf.py  template_parser.py  training_processor.py  training_processor_conf.py
kafka-components/src/processors/: from_json_to_lp.py  provider-selector.py  template-parser.py
kafka-components/src/producer-filebeat/: filebeat.yml  installation
kafka-components/src/producer-rally/: app.py  app_conf.py
progetto_influx/: docker-compose.yml
progetto_influx/influxdb_data/: influxd.bolt
progetto_influx/scripts/: trasform.py
progetto_influx/telegraf/: telegraf.conf
python-code-example/: training-ai-ranker-reader.py
test/influxdb-processor/Docker/: docker-compose.yml
(+37 files in other folders)
