[tool.poetry]
name = "paas-mon"
version = "0.1.0"
description = ""
authors = ["Giovanni Savarese <giovanni.savarese@lnl.infn.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.2.15"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
pydantic = "^2.11.7"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
